@startuml
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam packageStyle rectangle

title Architecture Logicielle - BdeLive

' ==================== COUCHE NOYAU ====================
package "Noyau (Core)" #E8F4F8 {
  class Application {
    + boot(): void
    + request(): Request
    + response(): Response
  }
  class Request {
    + get(), post(), method()
  }
  class Container {
    + get(id): object
    + set(id, builder): self
  }
  class Database {
    + getConnection(): PDO
  }
}

' ==================== COUCHE CONTRÔLEURS ====================
package "Contrôleurs" #F0E8F8 {
  abstract class AbstractController {
     render(view, data): void
     redirect(url): never
  }
}

' ==================== COUCHE VUES ====================
package "Vues (Templates PHP)" #F8F0E8 {
  class View <<Concept>> {
    Données passées via render()
    Sortie HTML échappée
  }
}

' ==================== COUCHE DOMAINE (Exemple avec Event) ====================
package "Domaine" #F0F8E8 {

  note as ExampleNote
    **Note d'Architecture :**
    Le domaine "Event" (Événement) est utilisé ici à titre d'exemple.
    Le même flux exact de Data Mapper
    (Contrôleur ➔ Dépôt ➔ Fabrique ➔ Entité)
    est strictement appliqué au domaine "Article".
  end note

  package "Dépôts (Repositories)" {
    class EventRepository {
      - pdo: PDO
      + findById(id): Event|null
      + save(event: Event): bool
    }
  }
  package "Fabriques (Factories)" {
    class EventFactory {
      + createFromDatabase(data): Event
      + toDatabase(event): array
    }
  }
  package "Entités (Entities)" {
    class Event {
      Objet de domaine pur
      Aucune logique de base de données
    }
  }
}

' ==================== FLUX - CLEAN ARCHITECTURE (..> = dépendance) ====================
Application ..> Request : 1. Reçoit la requête HTTP
Application ..> Container : 2. Demande le contrôleur via l'injection de dépendances (DI)
Container ..> AbstractController : 3. Instancie et injecte les dépendances

AbstractController ..> EventRepository : 4. Demande les données du domaine
EventRepository ..> Database : 5. Exécute la requête SQL (PDO)
EventRepository ..> EventFactory : 6. Délègue le mapping des données
EventFactory ..> Event : 7. Crée l'entité

EventRepository ..> Event : 8. Retourne l'entité
AbstractController ..> Event : 9. Reçoit l'entité
AbstractController ..> View : 10. Passe les données à la vue
@enduml
